--- a/index.html
+++ b/index.html
@@ -3,8 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <title>jQuery game</title>
+
 </head>
 <body>
 
+<div id="app"></div>
+<script src="js/jquery-3.2.1.js"></script>
+<script>
+
+var $app = $('#app');
+var $table = $('<table>');
+var $tr = $('<tr>');
+var $td;
+
+    for (var j = 0; j < 10; j++) {
+        $tr = $('<tr>');
+
+        for (var i = 0; i < 10; i++) {
+           $td = $('<td>');
+           $tr.append($td);
+        };
+
+    $table.append($tr);
+
+    }
+
+    $app.append($table);
+
+    console.log($app);
+
+
+</script>
 </body>
 </html>
