--- a/index.html
+++ b/index.html
@@ -5,52 +5,125 @@
     <title>jQuery game</title>
     <style>
         .cell {
-            width: 10px;
-            height:10px;
             border: 1px solid black;
+            width: 16px;
+            height: 16px
         }
 
-        .active-cell {
-            background: red;
+        .party {
+            background: blue;
         }
+
+        .snake {
+            background: yellow;
+        }
+
+        .head {
+            background: red;
+            background-image: url('https://cdn4.iconfinder.com/data/icons/penguin/154/penguin-baby-small-animal-512.png');
+            background-size: 16px 16px;
+        }
+
+
     </style>
 </head>
 <body>
 
-<div id="app"></div>
+<div id="board"></div>
 <script src="js/jquery-3.2.1.js"></script>
 <script>
 
-var $app = $('#app');
-var $table = $('<table>');
-var $tr = $('<tr>');
-var $td;
+        var $board = $('#board');
+        var $table = $('<table>');
+        var $tr = $('<tr>');
+        var $td;
+        var clubs
 
-function handleClick() {
-    $(this).toggleClass('active-cell');
-};
-
-$table.on('click', 'td', handleClick);
-
-function createTable(width, height) {
-
-    for (var j = 0; j < height; j++) {
-        $tr = $('<tr>');
-
-        for (var i = 0; i < width; i++) {
-            $td = $('<td>');
-            $tr.append($td);
+        function createTable(width, height) {
+            for (var j = 0; j < height; j++) {
+                $tr = $('<tr>');
+                for (var i = 0; i < width; i++) {
+                    $td = $('<td>');
+                    $tr.append($td);
+                }
+                $table.append($tr);
+            }
         }
 
-        $table.append($tr);
-    }
-}
+        createTable(20, 20);
+        $('td', $table).addClass('cell');
+        $board.append($table);
 
-createTable(10, 10);
+        var snakeCells = $('td').slice(0, 2).toArray(); //snake length
+        $(snakeCells).addClass('snake');
 
-$('td', $table).addClass('cell');
 
-$app.append($table);
+        function drawParty(x, y, n) {
+            for (var i = x; i < x + 3; i++) {
+                for (var j = y; j < y + 3; j++) {
+                    $('table tr:nth-child(' + i + ') td:nth-child(' + j + ')').addClass('party party' + n)
+                }
+            }
+            return $('.party' + n);
+        }
+
+        $partyOne = drawParty(5, 5, 1);
+        $partyTwo = drawParty(5, 14, 2);
+        $partyThree = drawParty(14, 1, 3);
+        $partyFour = drawParty(14, 14, 4);
+
+        var moves = {
+            38: function up($node) {
+                return $node.parent().prev().find('.cell').eq($node.index());
+            },
+            40: function down($node) {
+                return $node.parent().next().find('.cell').eq($node.index());
+            },
+            37: function left($node) {
+                return $node.prev();
+            },
+            39: function right($node) {
+                return $node.next();
+            }
+        };
+
+        moves[38].invalid = 40;
+        moves[40].invalid = 38;
+        moves[37].invalid = 39;
+        moves[39].invalid = 37;
+
+        var direction = moves[40];
+
+        function checkInParty(n){
+            return !!$( '.snake.head.party' + n).length;
+        }
+        var interval = setInterval(function () {
+
+            var tail = snakeCells[0];
+            var head = snakeCells[snakeCells.length - 1];
+
+            $(head).removeClass('head');
+
+            var $nextHead = direction($(head));
+
+            $(tail).removeClass('snake');
+            snakeCells = snakeCells.slice(1);
+
+
+            snakeCells = snakeCells.concat($nextHead.get(0));
+            $nextHead.addClass('head snake');
+
+            if( checkInParty(1) || checkInParty(2) || checkInParty(3) || checkInParty(4)){
+                clearInterval(interval);
+                alert('Party');
+            }
+
+            // console.log('Czy jest w party 1: ', checkInParty(1) );
+            // console.log('Czy jest w party 2: ', checkInParty(2) );
+            // console.log('Czy jest w party 3: ', checkInParty(3) );
+            // console.log('Czy jest w party 4: ', checkInParty(4) );
+
+        }, 500)
 
 
 </script>
