--- a/index.html
+++ b/index.html
@@ -44,6 +44,40 @@
 <body>
 
 <div id="board"></div>
+
+<h2>Zasady gry</h2>
+<p></p>
+<p>Miejscem gry jest imprezowa dzielnica miasta. Przyszedłeś tu aby bawić się ze swoimi przyjaciółmi, jednak pojawiłeś się jako ostatni.
+    Twoim zadaniem jest odwiedzić wszystkie miejsca imprez i zabrać z każdego swoich przyjaciół. Kiedy zbierzesz ich wszystkich, zabierasz ich na imprezę specjalną.
+    Utrudnieniem jest fakt, że jako wyjątkowo towarzyska osoba przyciągasz przypadkowych imprezowiczów, który koniecznie chcą do Ciebie dołączyć. Każda napotkana osoba dołącza do Ciebie i już nie idziesz sam. Przypadkowych imprezowiczów możesz zaprowadzić do dowolnego miejsca imprezy i tam pozostawić pod warunkiem, że w lokalu jest wolne miejsce. Wygrywasz, jeśli na imprezę specjalną dotrzesz tylko ze swoimi przyjaciółmi.
+</p>
+<table style="border: 1px solid grey; border-spacing: 5px">
+    <tr>
+        <td width="16px"></td>
+        <td width="300px"></td>
+    </tr>
+    <tr>
+        <td class="head"></td>
+        <td>TY</td>
+    </tr>
+    <tr>
+        <td class="friends"> </td>
+        <td>Twój przyjaciel</td>
+    </tr>
+    <tr>
+        <td class="aliens"></td>
+        <td>Przypadkowy imprezowicz</td>
+    </tr>
+    <tr>
+        <td class="party"></td>
+        <td>Miejsce imprezy</td>
+    </tr>
+    <tr>
+        <td class="party">2</td>
+        <td>Liczba przyjaciół w miejscu imprezy</td>
+    </tr>
+</table>
+
 <script src="js/jquery-3.2.1.js"></script>
 <script>
 
