--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         $('td', $table).addClass('cell');
         $board.append($table);
 
-        var aliens = 1; // snake chcaracter ---------
+        var aliens = 5; // snake chcaracter ---------
         var friends = 1;
         var snakeLength =  1 + friends + aliens;
 
@@ -134,15 +134,29 @@
         $partyThree = drawParty(14, 5, 3);
         $partyFour = drawParty(14, 14, 4);
 
-        var partyFriends1 = Math.round(Math.random(0,1)*2 + 1); // generating Friends in party places
-        var partyFriends2 = Math.round(Math.random(0,1)*3 + 1);
-        var partyFriends3 = Math.round(Math.random(0,1)*2+ 1);
-        var partyFriends4 = Math.round(Math.random(0,1)*4 +1);
+        function addPartyFriends(n) { // generating number of Friends in party places and info about them
+            var addFriends = [];
+            for (var i = 0; i < 4; i++) {
+                addFriends.push(Math.round(Math.random(0,1)*4));
+                $('.party' + (i+1)).slice(0,1).text(addFriends[i]);
+            }
+            return addFriends;
+        }
 
-        $('.party1').slice(0,1).text(partyFriends1); // generating number of Friends in party places
-        $('.party2').slice(0,1).text(partyFriends2);
-        $('.party3').slice(0,1).text(partyFriends3);
-        $('.party4').slice(0,1).text(partyFriends4);
+        var partyFriends = addPartyFriends(4);
+
+
+        function addFreePlaces(n) { // generating number of free places in party and info about them
+            var addPlaces = [];
+            for (var i = 0; i < 4; i++) {
+                addPlaces.push(Math.round(Math.random(0,1)*4));
+                $('.party' + (i+1)).slice(8).text(addPlaces[i]);
+            }
+            return addPlaces;
+        }
+
+        var freePlaces = addFreePlaces(4);
+
 
         var moves = {
             38: function up($node) {
@@ -169,7 +183,7 @@
 
         $(window).on('keydown', function (event) {  // change direction
 
-            var code = event.keyCode
+            var code = event.keyCode;
 
             if (code === direction.invalid) {
                 return
@@ -179,8 +193,12 @@
         });
 
 
-        function exitParty(n){  //anyParty
+        function exitParty(n){  //detect exit head snake from Party
             return !!$( '.snake.party' + n).length && !$('.snake.head.party' + n).length;
+        }
+
+        function lostOfAliens(n){  //detect exit friends and head snake from Party
+            return !!$( '.snake.party' + n).length && !$('.snake.friends.party' + n).length && !$('.snake.head.party' + n).length;
         }
 
         var interval = setInterval(function () {
@@ -189,44 +207,71 @@
             var head = snakeCells[snakeCells.length - 1];
             var $nextHead = direction($(head));
 
-            if(exitParty(1) &&partyFriends1 > 0) {
-                partyFriends1 -= 1;
-                $('.party1').slice(0, 1).text(partyFriends1);
-                $(snakeCells).removeClass('head friends aliens');
-                friends +=1;
-
-            } else if (exitParty(2) &&partyFriends2 > 0) {
-                partyFriends2 -= 1;
-                $('.party2').slice(0, 1).text(partyFriends2);
-                $(snakeCells).removeClass('head friends aliens');
-                friends +=1;
-
-            } else if (exitParty(3) &&partyFriends3 > 0) {
-                partyFriends3 -= 1;
-                $('.party3').slice(0, 1).text(partyFriends3);
-                $(snakeCells).removeClass('head friends aliens');
-                friends +=1;
-
-            } else if (exitParty(4) &&partyFriends4 > 0) {
-                partyFriends4 -= 1;
-                $('.party4').slice(0, 1).text(partyFriends4);
-                $(snakeCells).removeClass('head friends aliens');
+            if (exitParty(1) && partyFriends[0] > 0) { // reducing number friends in party Place
+                partyFriends[0] -= 1;
+                $('.party1').slice(0, 1).text(partyFriends[0]);
                 friends += 1;
+                $(snakeCells).removeClass('head friends aliens');
+                snakeCells = snakeCells.concat($nextHead.get(0));
+                $nextHead.addClass('head snake');
+            } else if (lostOfAliens(1) && freePlaces[0] > 0) { // reducing number free places in party Place
+                freePlaces[0] -= 1;
+                $('.party1').slice(8).text(freePlaces[0]);
+                aliens -= 1;
+                $(snakeCells).removeClass('friends aliens');
+                $(tail).removeClass('snake');
+                snakeCells = snakeCells.slice(1);
+            } else if (exitParty(2) && partyFriends[1] > 0) { // reducing number friends in party Place
+                partyFriends[1] -= 1;
+                $('.party2').slice(0, 1).text(partyFriends[1]);
+                friends += 1;
+                $(snakeCells).removeClass('head friends aliens');
+                snakeCells = snakeCells.concat($nextHead.get(0));
+                $nextHead.addClass('head snake');
+            } else if (lostOfAliens(2) && freePlaces[1] > 0) { // reducing number free places in party Place
+                freePlaces[1] -= 1;
+                $('.party2').slice(8).text(freePlaces[1]);
+                aliens -= 1;
+                $(snakeCells).removeClass('friends aliens');
+                $(tail).removeClass('snake');
+                snakeCells = snakeCells.slice(1);
+            } else if (exitParty(3) && partyFriends[2] > 0) { // reducing number friends in party Place
+                partyFriends[2] -= 1;
+                $('.party3').slice(0, 1).text(partyFriends[2]);
+                friends += 1;
+                $(snakeCells).removeClass('head friends aliens');
+                snakeCells = snakeCells.concat($nextHead.get(0));
+                $nextHead.addClass('head snake');
+            } else if (lostOfAliens(3) && freePlaces[2] > 0) { // reducing number free places in party Place
+                freePlaces[2] -= 1;
+                $('.party3').slice(8).text(freePlaces[2]);
+                aliens -= 1;
+                $(snakeCells).removeClass('friends aliens');
+                $(tail).removeClass('snake');
+                snakeCells = snakeCells.slice(1);
+            } else if (exitParty(4) && partyFriends[3] > 0) { // reducing number friends in party Place
+                partyFriends[3] -= 1;
+                $('.party4').slice(0, 1).text(partyFriends[3]);
+                friends += 1;
+                $(snakeCells).removeClass('head friends aliens');
+                snakeCells = snakeCells.concat($nextHead.get(0));
+                $nextHead.addClass('head snake');
+            } else if (lostOfAliens(4) && freePlaces[3] > 0) { // reducing number free places in party Place
+                freePlaces[3] -= 1;
+                $('.party4').slice(8).text(freePlaces[3]);
+                aliens -= 1;
+                $(snakeCells).removeClass('friends aliens');
+                $(tail).removeClass('snake');
+                snakeCells = snakeCells.slice(1);
             } else {
                 $(snakeCells).removeClass('head friends aliens');
                 $(tail).removeClass('snake');
                 snakeCells = snakeCells.slice(1);
+                snakeCells = snakeCells.concat($nextHead.get(0));
+                $nextHead.addClass('head snake');
             }
 
-
-//            $(snakeCells).removeClass('head friends aliens');
-//            $(tail).removeClass('snake');
-//            snakeCells = snakeCells.slice(1);
-            snakeCells = snakeCells.concat($nextHead.get(0));
-            $nextHead.addClass('head snake');
             drawSnake();
-
-
 
 //                clearInterval(interval);
         }, 400)
