--- a/index.html
+++ b/index.html
@@ -42,11 +42,21 @@
             background: black;
         }
 
+        .scoreFriends,
+        .scoreAliens {
+            display: block;
+            font-size: 2em;
+        }
+
     </style>
 </head>
 <body>
 
 <div id="board"></div>
+<div>
+    <div class="scoreFriends"></div>
+    <div class="scoreAliens"></div>
+</div>
 
 <h2>Zasady gry</h2>
 <p></p>
@@ -144,19 +154,20 @@
         function addPartyFriends(n) { // generating number of Friends in party places and info about them
             var addFriends = [];
             for (var i = 0; i < 4; i++) {
-                addFriends.push(Math.round(Math.random(0,1)*4));
+                addFriends.push(Math.round(Math.random(0,1)*3+2));
                 $('.party' + (i+1)).slice(0,1).text(addFriends[i]);
             }
             return addFriends;
         }
 
         var partyFriends = addPartyFriends(4);
+        var totalFriends = partyFriends.reduce((total, i) => total += i , 0);
 
 
         function addFreePlaces(n) { // generating number of free places in party and info about them
             var addPlaces = [];
             for (var i = 0; i < 4; i++) {
-                addPlaces.push(Math.round(Math.random(0,1)*4));
+                addPlaces.push(Math.round(Math.random(0,1)*4+4));
                 $('.party' + (i+1)).slice(8).text(addPlaces[i]);
             }
             return addPlaces;
@@ -254,6 +265,12 @@
             var head = snakeCells[snakeCells.length - 1];
             var $nextHead = direction($(head));
 
+            if ($nextHead.hasClass('snake') || $nextHead.length === 0) {
+                clearInterval(interval);
+                alert('GAME OVER');
+                return;
+            }
+
             if (exitParty(1) && partyFriends[0] > 0) { // reducing number friends in party Place
                 partyFriends[0] -= 1;
                 $('.party1').slice(0, 1).text(partyFriends[0]);
@@ -324,6 +341,9 @@
                 $nextHead.addClass('head snake');
             }
             drawSnake();
+
+            $('.scoreFriends').text(`Poszukaj ${totalFriends-friends} przyjaciół`);
+            $('.scoreAliens').text(`Masz ${aliens} obcych`);
 
         }, 600)
 
