--- a/index.html
+++ b/index.html
@@ -103,22 +103,11 @@
         var $tr = $('<tr>');
         var $td;
 
-        function createTable(width, height) {
-            for (var j = 0; j < height; j++) {
-                $tr = $('<tr>');
-                for (var i = 0; i < width; i++) {
-                    $td = $('<td>');
-                    $tr.append($td);
-                }
-                $table.append($tr);
-            }
-        }
-
         createTable(20, 20); // drawing board ---------
         $('td', $table).addClass('cell');
         $board.append($table);
 
-        var aliens = 0; // snake chcaracter ---------
+        var aliens = 0; // snake character ---------
         var friends = 0;
         var snakeLength =  1 + friends + aliens;
 
@@ -126,57 +115,19 @@
         $(snakeCells).addClass('snake');
         $(snakeCells[snakeCells.length-1]).addClass('head');
 
-        function drawSnake() {
-            for (var i = 0; i < aliens; i++) {
-                $(snakeCells[i]).addClass('aliens');
-            }
-            for (var j = aliens; j < aliens + friends; j++) {
-                $(snakeCells[j]).addClass('friends');
-            }
-        }
-
         drawSnake(); // drawing snake ---------
-
-        function drawParty(x, y, n) {
-            for (var i = x; i < x + 3; i++) {
-                for (var j = y; j < y + 3; j++) {
-                    $('table tr:nth-child(' + i + ') td:nth-child(' + j + ')').addClass('party party' + n);
-                }
-            }
-            return $('.party' + n);
-        }
 
         $partyOne = drawParty(5, 5, 1); // drawing party places  ---------
         $partyTwo = drawParty(5, 14, 2);
         $partyThree = drawParty(14, 5, 3);
         $partyFour = drawParty(14, 14, 4);
 
-        function addPartyFriends(n) { // generating number of Friends in party places and info about them
-            var addFriends = [];
-            for (var i = 0; i < 4; i++) {
-                addFriends.push(Math.round(Math.random(0,1)*3+2));
-                $('.party' + (i+1)).slice(0,1).text(addFriends[i]);
-            }
-            return addFriends;
-        }
-
         var partyFriends = addPartyFriends(4);
         var totalFriends = partyFriends.reduce((total, i) => total += i , 0);
 
-
-        function addFreePlaces(n) { // generating number of free places in party and info about them
-            var addPlaces = [];
-            for (var i = 0; i < 4; i++) {
-                addPlaces.push(Math.round(Math.random(0,1)*4+4));
-                $('.party' + (i+1)).slice(8).text(addPlaces[i]);
-            }
-            return addPlaces;
-        }
-
         var freePlaces = addFreePlaces(4);
 
-
-        $('tr td:nth-child(1)', $table).addClass('enter'); //Enter Free Aliens
+        $('tr td:nth-child(1)', $table).addClass('enter'); //definition area to enter new free Aliens
         $('tr td:nth-child(20)', $table).addClass('enter');
         $('tr:nth-child(1) td', $table).addClass('enter');
         $('tr:nth-child(20) td', $table).addClass('enter');
@@ -184,8 +135,7 @@
         var freeAliens = [];
         var nextStepFreeAliens = [];
 
-
-        var interval = setInterval(function () {  //generate Enter Free Aliens
+        var interval = setInterval(function () {  //generate enter free Aliens
             freeAliens.push($enter.eq(Math.floor(Math.random() * $enter.length)).addClass('freeAlien'));
 
             for (var i = 37; i < 41; i++) { //generate first direction of Free Alien
@@ -198,7 +148,7 @@
                 }
             }
             $enter = $('.enter').not('.freeAlien').not('.snake');
-        }, 400);
+        }, 500);
 
 
         var interval = setInterval(function () { //move Free Aliens
@@ -209,7 +159,6 @@
                 freeAliens[i] = nextStep;
             };
         }, 600);
-
 
 
         var moves = {
@@ -234,7 +183,6 @@
 
         var direction = moves[40];
 
-
         $(window).on('keydown', function (event) {  // change direction
 
             var code = event.keyCode;
@@ -245,19 +193,6 @@
 
             direction = moves[event.keyCode] || direction
         });
-
-
-        function exitParty(n){  //detect exit head snake from Party
-            return !!$( '.snake.party' + n).length && $('.snake.head.party' + n).length !== 0;
-        }
-
-        function lostOfAliens(n){  //detect exit friends and head snake from Party
-            return !!$( '.snake.party' + n).length && !$('.snake.friends.party' + n).length && !$('.snake.head.party' + n).length;
-        }
-
-        function meetFreeAlien() {  //detect meeting with FreeAlien
-            return $('.snake.freeAlien').length > 0 || $('.head.freeAlien').length > 0
-        }
 
 
         var interval = setInterval(function () {
@@ -271,56 +206,56 @@
                 return;
             }
 
-            if (exitParty(1) && partyFriends[0] > 0) { // reducing number friends in party Place
+            if (iCanTakeFriendFromParty(1)) { // reducing number friends in party Place
                 partyFriends[0] -= 1;
                 $('.party1').slice(0, 1).text(partyFriends[0]);
                 friends += 1;
                 $(snakeCells).removeClass('head friends aliens');
                 snakeCells = snakeCells.concat($nextHead.get(0));
                 $nextHead.addClass('head snake');
-            } else if (lostOfAliens(1) && freePlaces[0] > 0) { // reducing number free places in party Place
+            } else if (iCanLeaveAnAlienInParty(1)) { // reducing number free places in party Place
                 freePlaces[0] -= 1;
                 $('.party1').slice(8).text(freePlaces[0]);
                 aliens -= 1;
                 $(snakeCells).removeClass('friends aliens');
                 $(tail).removeClass('snake');
                 snakeCells = snakeCells.slice(1);
-            } else if (exitParty(2) && partyFriends[1] > 0) { // reducing number friends in party Place
+            } else if (iCanTakeFriendFromParty(2)) { // reducing number friends in party Place
                 partyFriends[1] -= 1;
                 $('.party2').slice(0, 1).text(partyFriends[1]);
                 friends += 1;
                 $(snakeCells).removeClass('head friends aliens');
                 snakeCells = snakeCells.concat($nextHead.get(0));
                 $nextHead.addClass('head snake');
-            } else if (lostOfAliens(2) && freePlaces[1] > 0) { // reducing number free places in party Place
+            } else if (iCanLeaveAnAlienInParty(2)) { // reducing number free places in party Place
                 freePlaces[1] -= 1;
                 $('.party2').slice(8).text(freePlaces[1]);
                 aliens -= 1;
                 $(snakeCells).removeClass('friends aliens');
                 $(tail).removeClass('snake');
                 snakeCells = snakeCells.slice(1);
-            } else if (exitParty(3) && partyFriends[2] > 0) { // reducing number friends in party Place
+            } else if (iCanTakeFriendFromParty(3)) { // reducing number friends in party Place
                 partyFriends[2] -= 1;
                 $('.party3').slice(0, 1).text(partyFriends[2]);
                 friends += 1;
                 $(snakeCells).removeClass('head friends aliens');
                 snakeCells = snakeCells.concat($nextHead.get(0));
                 $nextHead.addClass('head snake');
-            } else if (lostOfAliens(3) && freePlaces[2] > 0) { // reducing number free places in party Place
+            } else if (iCanLeaveAnAlienInParty(3)) { // reducing number free places in party Place
                 freePlaces[2] -= 1;
                 $('.party3').slice(8).text(freePlaces[2]);
                 aliens -= 1;
                 $(snakeCells).removeClass('friends aliens');
                 $(tail).removeClass('snake');
                 snakeCells = snakeCells.slice(1);
-            } else if (exitParty(4) && partyFriends[3] > 0) { // reducing number friends in party Place
+            } else if (iCanTakeFriendFromParty(4)) { // reducing number friends in party Place
                 partyFriends[3] -= 1;
                 $('.party4').slice(0, 1).text(partyFriends[3]);
                 friends += 1;
                 $(snakeCells).removeClass('head friends aliens');
                 snakeCells = snakeCells.concat($nextHead.get(0));
                 $nextHead.addClass('head snake');
-            } else if (lostOfAliens(4) && freePlaces[3] > 0) { // reducing number free places in party Place
+            } else if (iCanLeaveAnAlienInParty(4)) { // reducing number free places in party Place
                 freePlaces[3] -= 1;
                 $('.party4').slice(8).text(freePlaces[3]);
                 aliens -= 1;
@@ -340,6 +275,7 @@
                 snakeCells = snakeCells.concat($nextHead.get(0));
                 $nextHead.addClass('head snake');
             }
+
             drawSnake();
 
             $('.scoreFriends').text(`Poszukaj ${totalFriends-friends} przyjaciół`);
@@ -347,6 +283,66 @@
 
         }, 600)
 
+
+//definitions -------------------------
+
+function createTable(width, height) {
+    for (var j = 0; j < height; j++) {
+        $tr = $('<tr>');
+            for (var i = 0; i < width; i++) {
+            $td = $('<td>');
+            $tr.append($td);
+        }
+    $table.append($tr);
+    }
+}
+
+function drawSnake() {
+    for (var i = 0; i < aliens; i++) {
+        $(snakeCells[i]).addClass('aliens');
+    }
+    for (var j = aliens; j < aliens + friends; j++) {
+        $(snakeCells[j]).addClass('friends');
+    }
+}
+
+function drawParty(x, y, n) {
+    for (var i = x; i < x + 3; i++) {
+        for (var j = y; j < y + 3; j++) {
+            $('table tr:nth-child(' + i + ') td:nth-child(' + j + ')').addClass('party party' + n);
+        }
+    }
+    return $('.party' + n);
+}
+
+function addPartyFriends(n) { // generating number of Friends in party places and info about them
+    var addFriends = [];
+    for (var i = 0; i < 4; i++) {
+        addFriends.push(Math.round(Math.random(0,1)*3+2));
+        $('.party' + (i+1)).slice(0,1).text(addFriends[i]);
+    }
+    return addFriends;
+}
+
+function addFreePlaces(n) { // generating number of free places in party and info about them
+    var addPlaces = [];
+    for (var i = 0; i < 4; i++) {
+        addPlaces.push(Math.round(Math.random(0,1)*4+4));
+        $('.party' + (i+1)).slice(8).text(addPlaces[i]);
+    }
+    return addPlaces;
+}
+
+function iCanTakeFriendFromParty(n){  //detect exit head snake from Party
+    return (!!$( '.snake.party' + n).length && $('.snake.head.party' + n).length !== 0 && partyFriends[n-1] > 0);
+}
+
+function iCanLeaveAnAlienInParty(n){  //detect exit friends and head snake from Party
+    return !!$( '.snake.party' + n).length && !$('.snake.friends.party' + n).length && !$('.snake.head.party' + n).length && freePlaces[n-1] > 0;
+}
+function meetFreeAlien() {  //detect meeting with FreeAlien
+    return $('.snake.freeAlien').length > 0 || $('.head.freeAlien').length > 0
+}
 
 </script>
 </body>
